--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,6 +33,14 @@
     margin: 10px !important;
 }
 
+.m-3 {
+    margin: 3px !important;
+}
+
+.m-3-top{
+    margin-top: 3px !important;
+}
+
 .modal-add {
     max-width: 1280px;
 }
@@ -80,7 +88,7 @@ thead {
     height: 25px !important;
 }
 
-.togglebutton label input[type=checkbox]:checked + .toggle:after {
+.togglebutton label input[type=checkbox]:checked+.toggle:after {
     left: 40px !important;
 }
 
@@ -89,12 +97,89 @@ thead {
     left: 1px !important;
 }
 
-.navbar .collapse .navbar-nav .nav-item .nav-link{
+.navbar .collapse .navbar-nav .nav-item .nav-link {
     margin-left: 0px !important;
 }
 
-.navbar .nav-item:hover{
+.navbar .nav-item:hover {
     background-color: rgba(255, 255, 255, 0.1);
+}
+
+.checkstudent {
+    border: 1px solid #d2d2d2 !important;
+    border-radius: 5px !important;
+    margin-left: 3px !important;
+    max-width: 33% !important;
+}
+
+.lbstudent {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+
+/* Tooltip css */
+
+.cbtn:hover:after {
+    height: auto;
+    min-height: 30px;
+    word-break: break-word;
+    padding: 0.25em;
+    max-height: calc(100px - 0.5em);
+    width: calc(150px - 0.5em);
+    z-index: 0;
+}
+
+.cbtn:hover:before, .cbtn:hover:after {
+    opacity: 1;
+    -webkit-transition: opacity 0.5s, height 0.5s;
+    -o-transition: opacity 0.5s, height 0.5s;
+    transition: opacity 0.5s, height 0.5s;
+}
+
+.cbtn:before {
+    content: "";
+    width: 0%;
+    height: 0%;
+    position: absolute;
+    opacity: 0;
+}
+
+.cbtn-left:before {
+    top: 3px;
+    right: 100%;
+    border-left: 12px solid rgba(156, 39, 176, .9);
+    border-top: 12px solid transparent;
+    border-bottom: 12px solid transparent;
+}
+
+.cbtn:after {
+    margin-top: 0px;
+    content: attr(data-tooltip);
+    position: absolute;
+    width: 0;
+    background: rgba(156, 39, 176, .9);
+    opacity: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    border-radius: 8px;
+    color: #fff;
+    max-width: 150px;
+    z-index: -9999;
+    overflow: hidden;
+}
+
+.cbtn-left:after {
+    top: 0;
+    margin-right: 11px;
+    right: 100%;
 }
 
 #loading {
