--- a/partials/home.html
+++ b/partials/home.html
@@ -5,14 +5,13 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="material-datatables">
-                            <table id="hometable" class="table table-striped cell-border table-hover" cellspacing="0" width="100%" style="width:100%">
+                            <table datatable="ng" dt-options="newdtOptions" cellpadding="0" class="table table-striped cell-border table-hover">
                                 <thead>
                                     <tr>
                                         <th>STT</th>
                                         <th>Time</th>
                                         <th>ID</th>
-                                        <th>Họ</th>
-                                        <th>Tên</th>
+                                        <th>Họ Tên</th>
                                         <th>Giới tính</th>
                                         <th>Số điện thoại</th>
                                         <th>Địa chỉ</th>
@@ -21,17 +20,18 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td>Tiger Nixon</td>
-                                        <td>System Architect</td>
-                                        <td>Edinburgh</td>
-                                        <td>61</td>
-                                        <td>2011/04/25</td>
-                                        <td>2011/04/25</td>
-                                        <td>2011/04/25</td>
-                                        <td>2011/04/25</td>
-                                        <td>2011/04/25</td>
-                                        <td>dasd98 a0s9d</td>
+                                    <tr ng-repeat="content in list_student" style="cursor:pointer" ng-click="detail(content._id)">
+                                        <td class="text-center">{{$index +1}}</td>
+                                        <td>{{content.Regday +' '+ content.Regtime}}</td>
+                                        <td>{{content._id}}</td>
+                                        <td>{{content.Fullname}}</td>
+                                        <td>{{content.Sex[0].name}}</td>
+                                        <td>{{content.Phone}}</td>
+                                        <td>{{content.Address[0].name}}</td>
+                                        <td>{{content.Status_student[0].name}}</td>
+                                        <td>
+                                            <a href="" class="btn cbtn cbtn-left btn-primary btn-sm" data-tooltip="{{content.Manager[0].name}}">{{content.Manager[0].id}}</a>
+                                        </td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -41,43 +41,211 @@
             </div>
         </div>
     </div>
+
 </div>
 
-<script>
-    $(document).ready(function () {
-        $('#hometable').DataTable();
-        // $('#datatables').DataTable({
-        //     "pagingType": "full_numbers",
-        //     "lengthMenu": [
-        //         [10, 25, 50, -1],
-        //         [10, 25, 50, "All"]
-        //     ],
-        //     responsive: true,
-        //     language: {
-        //         search: "_INPUT_",
-        //         searchPlaceholder: "Search records",
-        //     }
-        // });
 
-        // var table = $('#datatable').DataTable();
+<!-- Modal -->
+<div class="modal fade" id="detail" tabindex="-1" role="dialog" data-backdrop="false" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-add m-3-top" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title text-center" style="font-family:'Times New Roman', Times, serif; font-weight: 900">Thông
+                    Tin Chi Tiết Học Viên {{_details._id}}</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" style="padding-top: 5px">
+                <div class="row">
+                    <div class="card m-3">
+                        <div class="card-body card-add">
+                            <form name="loginform">
+                                <div class="row">
+                                    <div class="col-lg-2 p-0">
+                                        <div class="form-group">
+                                            <div class="input-group">
+                                                <div class="input-group-prepend add">
+                                                    <label for="fullname">Họ tên</label>
+                                                </div>
+                                                <input type="text" class="form-control" ng-model="_details.Fullname" id="dname">
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="input-group add">
+                                                <label for="email">Email</label>
+                                                <input type="text" class="form-control" ng-model="_details.Email" id="demail">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="form-group">
+                                            <div class="input-group add">
+                                                <label for="phone">Số DT</label>
+                                                <input type="text" class="form-control" ng-model="_details.Phone" id="dphone">
+                                                <div class="input-group-prepend">
+                                                    <span class="input-group-text">
+                                                        <a href="">
+                                                            <i class="material-icons" style="color:#00BCD4; margin-top: -20px;border: 1px solid; border-radius: 5px;">call</i>
+                                                        </a>
+                                                    </span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="input-group add">
+                                                <label for="sex">Giới tính</label>
+                                                <select class="form-control" ng-model="selectedSex" ng-options="option.name for option in Sex">
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="form-group">
+                                            <div class="input-group add">
+                                                <label for="address">Địa chỉ</label>
+                                                <select class="form-control" ng-model="selectedAddress" ng-options="option.name for option in Address">
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="input-group add">
+                                                <label for="dayreg2">Ngày Báo Danh</label>
+                                                <input type="date" class="form-control" id="dayreg2">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="form-group">
+                                            <label for="note">Ghi chú</label>
+                                            <textarea class="form-control" rows="5" ng-model="_details.Note" id="dnote"></textarea>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-1 p-0">
+                                        <div class="form-group">
+                                            <button class="btn btn-warning btn-block btn-lg" style="padding-left: 17px;" ng-click="up_detail()">Cập
+                                                Nhật
+                                            </button>
+                                            <button class="btn btn-info btn-block">SMS</button>
+                                            <button class="btn btn-info btn-block">Email</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
 
-        //     // Edit record
-        //     table.on('click', '.edit', function () {
-        //         $tr = $(this).closest('tr');
-        //         var data = table.row($tr).data();
-        //         alert('You press on Row: ' + data[0] + ' ' + data[1] + ' ' + data[2] + '\'s row.');
-        //     });
+                <div class="row">
+                    <div class="card m-3">
+                        <div class="card-body">
+                            <form name="loginform">
+                                <div class="row">
+                                    <div class="col-lg-5">
+                                        <div class="form-group">
+                                            <div class="input-group add">
+                                                <label for="coso">Cơ sở</label>
+                                                <select class="form-control" ng-model="selectedCenter" ng-options="option.name for option in Center">
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="input-group add">
+                                                <label for="trangthai">Trạng thái</label>
+                                                <select class="form-control" ng-model="selectedStatus" ng-options="option.name for option in Status">
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-5">
+                                        <div class="form-group">
+                                            <div class="input-group add">
+                                                <label for="ngayhen">Ngày hẹn</label>
+                                                <input type="date" class="form-control" id="dngayhen">
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="input-group add">
+                                                <label for="giohen">Giờ hẹn</label>
+                                                <select class="form-control" ng-model="selectedTime" ng-options="option.name for option in Appointment_time">
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-2">
+                                        <button type="button" class="btn btn-lg btn-warning btn-block top-65" ng-click="up_detail_2()">
+                                            Cập nhật
+                                        </button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
 
-        //     // Delete a record
-        //     table.on('click', '.remove', function (e) {
-        //         $tr = $(this).closest('tr');
-        //         table.row($tr).remove().draw();
-        //         e.preventDefault();
-        //     });
+                <div class="row">
+                    <div class="card m-3">
+                        <div class="card-body">
+                            <form name="loginform">
+                                <div class="row">
+                                    <div class="col-4 checkstudent">
+                                        <div class="form-check">
+                                            <label class="form-check-label lbstudent">
+                                                <input class="form-check-input" id="1st" type="checkbox" value="" ng-model="st1" ng-disabled="auth.Username !== _details.Manager[0].id" ng-change="check1st(st1)"> Đã hẹn lần 1
+                                                <span class="form-check-sign">
+                                                    <span class="check"></span>
+                                                </span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="col-4 checkstudent">
+                                        <div class="form-check">
+                                            <label class="form-check-label lbstudent">
+                                                <input class="form-check-input" id="not1st" type="checkbox" value="" ng-model="not1st" ng-disabled="auth.Username !== _details.Manager[0].id" ng-change="checknot1st(not1st)"> Hẹn chưa đến (lần
+                                                1)
+                                                <span class="form-check-sign">
+                                                    <span class="check"></span>
+                                                </span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="col-4 checkstudent">
+                                        <div class="form-check">
+                                            <label class="form-check-label lbstudent">
+                                                <input class="form-check-input" id="unreg" type="checkbox" value="" ng-model="unreg" ng-disabled="auth.Username !== _details.Manager[0].id" ng-change="checkunreg(unreg)"> Đến chưa đăng ký
+                                                <span class="form-check-sign">
+                                                    <span class="check"></span>
+                                                </span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                        <small class="text-muted text-center">gọi lại ngày: lúc: </small>
+                    </div>
+                </div>
 
-        //     //Like record
-        //     table.on('click', '.like', function () {
-        //         alert('You clicked on Like button');
-        //     });
-    });
-</script>
+                <div class="row">
+
+                    <div class="col-4">
+                        <button type="button" class="btn btn-block btn-lg btn-primary">Thêm bạn</button>
+                    </div>
+                    <div class="col-4">
+                        <button type="button" class="btn btn-block btn-lg btn-success">Gọi lại thời gian</button>
+                    </div>
+                    <div class="col-4">
+                        <button type="button" class="btn btn-block btn-lg btn-warning">Gọi lại sau</button>
+                    </div>
+
+                </div>
+
+            </div>
+            <!-- <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div> -->
+        </div>
+    </div>
+</div>
