--- a/templates/header.html
+++ b/templates/header.html
@@ -15,7 +15,7 @@
             <div class="collapse navbar-collapse justify-content-end">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="" data-toggle="modal" data-target="#chagepas">
+                        <a class="nav-link" href="" data-toggle="modal" data-target="#update">
                             <i class="material-icons">person</i>
                             <p class="d-lg-none d-md-block">
                                 Account
@@ -36,6 +36,6 @@
     <!-- End Navbar -->
 </div>
 <!-- modal -->
-<div ng-include='"templates/changepass.html"'></div>
+<div ng-include='"templates/update.html"'></div>
 <div ng-include='"templates/add.html"'></div>
 <div ng-include='"templates/user.html"'></div>
