--- a/templates/update.html
+++ b/templates/update.html
@@ -1,5 +1,6 @@
 <!-- Modal -->
-<div ng-controller="HomeCtrl" class="modal fade top-150" id="chagepas" tabindex="-1" role="dialog" data-backdrop="false" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div ng-controller="HomeCtrl" class="modal fade top-150" id="update" tabindex="-1" role="dialog" data-backdrop="false" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -11,10 +12,13 @@
             <div class="modal-body">
                 <form name="passform">
                     <div class="form-group">
-                        <input type="password" class="form-control" ng-model="pass" id="rpassword" placeholder="Mật khẩu" required>
+                        <input type="password" class="form-control" ng-model="oldpass" id="oldpassword" placeholder="Mật khẩu cũ" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" class="form-control" ng-model="newpass" id="newpassword" placeholder="Mật khẩu mới" required>
                     </div>
                 </form>
-                <button type="button" class="btn btn-info btn-block" ng-click="changepass()">Xác Nhận</button>
+                <button type="button" class="btn btn-info btn-block" ng-click="update()">Xác Nhận</button>
             </div>
             <!-- <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
