--- a/templates/leftmenu.html
+++ b/templates/leftmenu.html
@@ -35,7 +35,7 @@
                     <p>Hẹn chưa đến</p>
                 </a>
             </li>
-            <li class="nav-item" ng-click="go_notreg()" ng-class="{'active': isactive === 5}">
+            <li class="nav-item" ng-click="go_unreg()" ng-class="{'active': isactive === 5}">
                 <a class="nav-link" href="">
                     <i class="material-icons">category</i>
                     <p>Đến chưa đăng ký</p>
