--- a/partials/home.html
+++ b/partials/home.html
@@ -5,7 +5,7 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="material-datatables">
-                            <table datatable="ng" dt-options="newdtOptions" cellpadding="0" class="table table-striped cell-border table-hover">
+                            <table datatable="ng" dt-options="newdtOptions" dt-instance="dtInstance" cellpadding="0" class="table table-striped cell-border table-hover">
                                 <thead>
                                     <tr>
                                         <th>STT</th>
@@ -320,7 +320,7 @@
                         <div class="card-body card-add">
                             <form name="loginform">
                                 <div class="row">
-                                    <div class="col-lg-2 p-0">
+                                    <div class="col-lg-3 p-0">
                                         <div class="form-group">
                                             <div class="input-group">
                                                 <div class="input-group-prepend add">
@@ -336,7 +336,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-3">
+                                    <div class="col-lg-4">
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="phone">Số DT</label>
@@ -358,7 +358,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-3">
+                                    <div class="col-lg-4">
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="address">Địa chỉ</label>
@@ -371,12 +371,6 @@
                                                 <label for="dayreg">Ngày đăng ký</label>
                                                 <input type="date" class="form-control datetimepicker" id="adddayreg" required>
                                             </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <div class="form-group">
-                                            <label for="note">Ghi chú</label>
-                                            <textarea class="form-control" rows="5" ng-model="addNote" id="note2"></textarea>
                                         </div>
                                     </div>
                                     <div class="col-lg-1 p-0">
@@ -419,7 +413,7 @@
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="ngayhen">Ngày hẹn</label>
-                                                <input type="date" class="form-control" id="addngayhen" required>
+                                                <input type="date" class="form-control" id="addngayhen">
                                             </div>
                                         </div>
                                         <div class="form-group">
@@ -431,9 +425,10 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-4">
-                                        <button type="button" class="btn btn-lg btn-warning btn-block top-65">Thêm mới và
-                                            chuyển
-                                        </button>
+                                        <div class="form-group">
+                                            <label for="note">Ghi chú</label>
+                                            <textarea class="form-control" rows="5" ng-model="addNote" id="note2"></textarea>
+                                        </div>
                                     </div>
                                 </div>
                             </form>
