--- a/templates/add.html
+++ b/templates/add.html
@@ -115,7 +115,7 @@
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="ngayhen">Ngày hẹn</label>
-                                                <input type="date" class="form-control" id="maddngayhen" required>
+                                                <input type="date" class="form-control" id="maddngayhen">
                                             </div>
                                         </div>
                                         <div class="form-group">
