--- a/partials/calendar.html
+++ b/partials/calendar.html
@@ -303,146 +303,141 @@ aria-hidden="true">
 
 <!-- Modal Thêm Học Viên-->
 <div class="modal fade" id="add2" tabindex="-1" role="dialog" data-backdrop="false" aria-labelledby="exampleModalLabel" aria-hidden="true">
-<div class="modal-dialog modal-add m-3-top" role="document">
-    <div class="modal-content">
-        <div class="modal-header">
-            <h4 class="modal-title text-center" style="font-family:'Times New Roman', Times, serif; font-weight: 900">Thêm
-                Học Viên</h4>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-        <div class="modal-body" style="padding-top: 5px">
-            <div class="row">
-                <div class="card m-10">
-                    <div class="card-body card-add">
-                        <form name="loginform">
-                            <div class="row">
-                                <div class="col-lg-2 p-0">
-                                    <div class="form-group">
-                                        <div class="input-group">
-                                            <div class="input-group-prepend add">
-                                                <label for="fullname">Họ tên</label>
+    <div class="modal-dialog modal-add m-3-top" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title text-center" style="font-family:'Times New Roman', Times, serif; font-weight: 900">Thêm
+                    Học Viên</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" style="padding-top: 5px">
+                <div class="row">
+                    <div class="card m-10">
+                        <div class="card-body card-add">
+                            <form name="loginform">
+                                <div class="row">
+                                    <div class="col-lg-3 p-0">
+                                        <div class="form-group">
+                                            <div class="input-group">
+                                                <div class="input-group-prepend add">
+                                                    <label for="fullname">Họ tên</label>
+                                                </div>
+                                                <input type="text" class="form-control" ng-model="data.fullname" id="name2" required>
                                             </div>
-                                            <input type="text" class="form-control" ng-model="data.fullname" id="name2" required>
                                         </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="input-group add">
-                                            <label for="email">Email</label>
-                                            <input type="text" class="form-control" ng-model="data.email" id="email2" required>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3">
-                                    <div class="form-group">
-                                        <div class="input-group add">
-                                            <label for="phone">Số DT</label>
-                                            <input type="number" class="form-control" ng-model="data.phone" id="phone2" required>
-                                            <div class="input-group-prepend">
-                                                <span class="input-group-text">
-                                                    <a href="">
-                                                        <i class="material-icons" style="color:#00BCD4; margin-top: -20px;border: 1px solid; border-radius: 5px;">call</i>
-                                                    </a>
-                                                </span>
+                                        <div class="form-group">
+                                            <div class="input-group add">
+                                                <label for="email">Email</label>
+                                                <input type="text" class="form-control" ng-model="data.email" id="email2" required>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <div class="input-group add">
-                                            <label for="sex">Giới tính</label>
-                                            <select class="form-control" ng-model="addselectedSex" ng-options="option.name for option in Sex">
-                                            </select>
+                                    <div class="col-lg-4">
+                                        <div class="form-group">
+                                            <div class="input-group add">
+                                                <label for="phone">Số DT</label>
+                                                <input type="number" class="form-control" ng-model="data.phone" id="phone2" required>
+                                                <div class="input-group-prepend">
+                                                    <span class="input-group-text">
+                                                        <a href="">
+                                                            <i class="material-icons" style="color:#00BCD4; margin-top: -20px;border: 1px solid; border-radius: 5px;">call</i>
+                                                        </a>
+                                                    </span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="input-group add">
+                                                <label for="sex">Giới tính</label>
+                                                <select class="form-control" ng-model="addselectedSex" ng-options="option.name for option in Sex">
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <div class="form-group">
+                                            <div class="input-group add">
+                                                <label for="address">Địa chỉ</label>
+                                                <select class="form-control" ng-model="addselectedAddress" ng-options="option.name for option in Address">
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="input-group add">
+                                                <label for="dayreg">Ngày đăng ký</label>
+                                                <input type="date" class="form-control datetimepicker" id="adddayreg" required>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-1 p-0">
+                                        <div class="form-group">
+                                            <button class="btn btn-warning btn-block btn-lg" style="padding-left: 17px;" ng-click="addnewfromaddFriend(data)">Thêm
+                                                mới
+                                            </button>
+                                            <button class="btn btn-info btn-block">SMS</button>
+                                            <button class="btn btn-info btn-block">Email</button>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
-                                    <div class="form-group">
-                                        <div class="input-group add">
-                                            <label for="address">Địa chỉ</label>
-                                            <select class="form-control" ng-model="addselectedAddress" ng-options="option.name for option in Address">
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="input-group add">
-                                            <label for="dayreg">Ngày đăng ký</label>
-                                            <input type="date" class="form-control datetimepicker" id="adddayreg" required>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3">
-                                    <div class="form-group">
-                                        <label for="note">Ghi chú</label>
-                                        <textarea class="form-control" rows="5" ng-model="addNote" id="note2"></textarea>
-                                    </div>
-                                </div>
-                                <div class="col-lg-1 p-0">
-                                    <div class="form-group">
-                                        <button class="btn btn-warning btn-block btn-lg" style="padding-left: 17px;" ng-click="addnewfromaddFriend(data)">Thêm
-                                            mới
-                                        </button>
-                                        <button class="btn btn-info btn-block">SMS</button>
-                                        <button class="btn btn-info btn-block">Email</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
+                            </form>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="row">
-                <div class="card m-10">
-                    <div class="card-body">
-                        <form name="loginform">
-                            <div class="row">
-                                <div class="col-lg-4">
-                                    <div class="form-group">
-                                        <div class="input-group add">
-                                            <label for="coso">Cơ sở</label>
-                                            <select class="form-control" ng-model="addselectedCenter" ng-options="option.name for option in Center">
-                                            </select>
+                <div class="row">
+                    <div class="card m-10">
+                        <div class="card-body">
+                            <form name="loginform">
+                                <div class="row">
+                                    <div class="col-lg-4">
+                                        <div class="form-group">
+                                            <div class="input-group add">
+                                                <label for="coso">Cơ sở</label>
+                                                <select class="form-control" ng-model="addselectedCenter" ng-options="option.name for option in Center">
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="input-group add">
+                                                <label for="trangthai">Trạng thái</label>
+                                                <select class="form-control" ng-model="addselectedStatus" ng-options="option.name for option in Status">
+                                                </select>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <div class="input-group add">
-                                            <label for="trangthai">Trạng thái</label>
-                                            <select class="form-control" ng-model="addselectedStatus" ng-options="option.name for option in Status">
-                                            </select>
+                                    <div class="col-lg-4">
+                                        <div class="form-group">
+                                            <div class="input-group add">
+                                                <label for="ngayhen">Ngày hẹn</label>
+                                                <input type="date" class="form-control" id="addngayhen">
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="input-group add">
+                                                <label for="giohen">Giờ hẹn</label>
+                                                <select class="form-control" ng-model="addselectedTime" ng-options="option.name for option in Appointment_time">
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <div class="form-group">
+                                            <label for="note">Ghi chú</label>
+                                            <textarea class="form-control" rows="5" ng-model="addNote" id="note2"></textarea>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
-                                    <div class="form-group">
-                                        <div class="input-group add">
-                                            <label for="ngayhen">Ngày hẹn</label>
-                                            <input type="date" class="form-control" id="addngayhen" required>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="input-group add">
-                                            <label for="giohen">Giờ hẹn</label>
-                                            <select class="form-control" ng-model="addselectedTime" ng-options="option.name for option in Appointment_time">
-                                            </select>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <button type="button" class="btn btn-lg btn-warning btn-block top-65">Thêm mới và
-                                        chuyển
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
+            <!-- <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div> -->
         </div>
-        <!-- <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-    <button type="button" class="btn btn-primary">Save changes</button>
-</div> -->
     </div>
-</div>
 </div>
